--- a/PunGenerator/PunGenerator.Droid/PunGenerator.Droid.csproj
+++ b/PunGenerator/PunGenerator.Droid/PunGenerator.Droid.csproj
@@ -87,6 +87,7 @@
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Setup.cs" />
+    <Compile Include="Views\MainView.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="GettingStarted.Xamarin" />
