--- a/PunGenerator/PunGenerator.Core/PunGenerator.Core.csproj
+++ b/PunGenerator/PunGenerator.Core/PunGenerator.Core.csproj
@@ -40,7 +40,9 @@
     <Compile Include="Repositories\Interfaces\IPunRepository.cs" />
     <Compile Include="Repositories\PunRepository.cs" />
     <Compile Include="Services\Interfaces\IPunService.cs" />
+    <Compile Include="Services\Interfaces\IRandomService.cs" />
     <Compile Include="Services\PunService.cs" />
+    <Compile Include="Services\RandomService.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
