Added sound playback when 'Tap to Reveal' is pressed

--- a/PunGenerator/PunGenerator.Core/PunGenerator.Core.csproj
+++ b/PunGenerator/PunGenerator.Core/PunGenerator.Core.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Repositories\PunRepository.cs" />
     <Compile Include="Services\Interfaces\IPunService.cs" />
     <Compile Include="Services\Interfaces\IRandomService.cs" />
+    <Compile Include="Services\Interfaces\ISoundService.cs" />
     <Compile Include="Services\PunService.cs" />
     <Compile Include="Services\RandomService.cs" />
     <Compile Include="ViewModels\MainViewModel.cs" />
