--- a/PunGenerator/PunGenerator.Core/packages.config
+++ b/PunGenerator/PunGenerator.Core/packages.config
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MvvmCross" version="4.4.0" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="MvvmCross.Binding" version="4.4.0" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="MvvmCross.Core" version="4.4.0" targetFramework="portable45-net45+win8+wpa81" />
-  <package id="MvvmCross.Platform" version="4.4.0" targetFramework="portable45-net45+win8+wpa81" />
+  <package id="MvvmCross" version="4.4.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="MvvmCross.Binding" version="4.4.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="MvvmCross.Core" version="4.4.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="MvvmCross.Platform" version="4.4.0" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="sqlite-net-pcl" version="1.3.1" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="SQLitePCLRaw.bundle_green" version="1.1.2" targetFramework="portable45-net45+win8+wp8+wpa81" />
+  <package id="SQLitePCLRaw.core" version="1.1.2" targetFramework="portable45-net45+win8+wp8+wpa81" />
 </packages>
